--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "jotai": "^2.0.3",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.41",
     "react": "^18.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.2.0",
-    "vite": "^4.1.4"
+    "vite": "^4.2.0"
   }
 }
